--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
+    "autoprefixer": "^10.4.2",
     "chalk": "^2.4.2",
     "dotenv": "^2.0.0",
     "ejs": "^2.7.4",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
-    "pg-native": "^3.0.0",
-    "sass": "^1.47.0"
+    "pg-native": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
